<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="384dp"
        android:layout_height="221dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.013"
        app:srcCompat="@drawable/notebook" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="315dp"
        android:layout_height="88dp"
        android:text="@string/login_str"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.632"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/login_text"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.03" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="294dp"
        android:layout_height="49dp"
        android:drawableLeft="@drawable/email"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/enter_email"
        android:inputType="text"
        android:padding="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.062" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="306dp"
        android:layout_height="58dp"
        android:ems="10"
        android:inputType="text"
        android:fontFamily="sans-serif-black"
        android:drawableLeft="@drawable/lock"
        android:drawableRight="@drawable/visibility"
        android:hint="@string/enter_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        app:layout_constraintVertical_bias="0.039" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="377dp"
        android:layout_height="80dp"
        android:layout_marginBottom="4dp"
        android:text="@string/sign_in"
        android:drawableLeft="@drawable/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2"
        app:layout_constraintVertical_bias="0.117" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/don_t_have_an_account"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbtn"
        app:layout_constraintVertical_bias="0.101" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="192dp"
        android:layout_height="54dp"
        android:layout_marginBottom="4dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/let_s_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>